base_repo: align all 50 T*-long.md prompts with upstream EP content
Strip fabricated implementation paths (pkg/.../*.go, src/hotspot/.../*.cpp,
Lib/.../*.py, etc.) that were introduced by prior automated rewrites but
not present in the original KEP/JEP/PEP/RFC source. Replace concrete
file/class references with spec-level prose so coding agents must derive
the implementation layout from the codebase rather than the prompt.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>